--- a/Spot-A-Cop/Base.lproj/Main.storyboard
+++ b/Spot-A-Cop/Base.lproj/Main.storyboard
@@ -24,5 +24,20 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="20Y-Xo-1TE">
+            <objects>
+                <viewController id="tG9-io-q7y" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MKP-Gb-TWH">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="MWT-Sj-P8V"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gvw-gl-nif" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1214" y="117"/>
+        </scene>
     </scenes>
 </document>
