--- a/Spot-A-Cop/Base.lproj/Main.storyboard
+++ b/Spot-A-Cop/Base.lproj/Main.storyboard
@@ -123,32 +123,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BLN-cK-1gg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="21.739130434782609" y="829.6875"/>
-        </scene>
-        <!--Feed View Controller-->
-        <scene sceneID="gbe-S5-Dnr">
-            <objects>
-                <viewController id="8Sw-FR-09V" customClass="FeedViewController" customModule="Spot_A_Cop" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="i1h-NX-DDF">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="HEllo" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s9r-px-vbP">
-                                <rect key="frame" x="141" y="390" width="194" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="eil-cR-B0Z"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="OQh-U7-mTj"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cje-JM-ahY" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1789.8550724637682" y="160.71428571428569"/>
+            <point key="canvasLocation" x="1883" y="161"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sh0-Li-ZCu">
@@ -161,7 +136,7 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="8Sw-FR-09V" kind="relationship" relationship="rootViewController" id="Cw0-N2-WcX"/>
+                        <segue destination="L05-Vu-hPv" kind="presentation" id="yYK-UF-Ggh"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zog-15-km2" userLabel="First Responder" sceneMemberID="firstResponder"/>
